Adding some nice page transitions

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -130,10 +130,9 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 						'Authored a Selenium Wrapper library for executing test scenarios in multiple browsers using NUnit and WebDriver.'
 					]}
 				/>
-				/>
 
 				<TimelineJobEntry
-					title="Senior .Net Developer and Scrum Master"
+					title="Senior .Net Developer"
 					company="Unified Healthcare Group"
 					startDate="2013-02"
 					endDate="2014-05"
