--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -11,7 +11,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 		<div class="cv-header">
 			<h1>Dejan Vasic</h1>
 			<p class="subtitle">Staff Software Engineer at Open Universities Australia</p>
-			<p class="contact">Melbourne, Victoria, Australia</p>
+			<p class="contact">Melbourne, Australia</p>
 		</div>
 
 		<Section title="Professional Summary">
@@ -32,6 +32,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Staff Software Engineer"
 					company="Open Universities Australia"
+					location="Melbourne, Australia"
 					startDate="2021-10"
 					endDate="Present"
 					responsibilities={[
@@ -65,6 +66,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Senior Software Engineer"
 					company="Open Universities Australia"
+					location="Melbourne, Australia"
 					startDate="2020-07"
 					endDate="2021-10"
 					responsibilities={[
@@ -79,6 +81,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Senior Software Engineer"
 					company="SEEK"
+					location="Melbourne, Australia"
 					startDate="2019-02"
 					endDate="2020-07"
 					responsibilities={[
@@ -92,6 +95,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Senior Software Engineer"
 					company="Apthletic"
+					location="Melbourne, Australia"
 					startDate="2018-04"
 					endDate="2019-02"
 					responsibilities={[
@@ -106,6 +110,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Senior Software Developer"
 					company="MYOB"
+					location="Melbourne, Australia"
 					startDate="2016-09"
 					endDate="2018-04"
 					responsibilities={[
@@ -120,6 +125,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Senior .Net Developer"
 					company="TAL Life"
+					location="Melbourne, Australia"
 					startDate="2014-04"
 					endDate="2016-09"
 					responsibilities={[
@@ -134,6 +140,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Senior .Net Developer"
 					company="Unified Healthcare Group"
+					location="Melbourne, Australia"
 					startDate="2013-02"
 					endDate="2014-05"
 					responsibilities={[
@@ -147,6 +154,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title=".Net Technical Lead"
 					company="eNett"
+					location="Melbourne, Australia"
 					startDate="2009-09"
 					endDate="2013-02"
 					responsibilities={[
@@ -161,6 +169,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title=".Net Developer"
 					company="Object Next Software"
+					location="Melbourne, Australia"
 					startDate="2009-01"
 					endDate="2009-09"
 					responsibilities={[
@@ -174,6 +183,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title=".Net Developer"
 					company="Mainfreight (Pelican Solutions Software)"
+					location="Melbourne, Australia"
 					startDate="2008-05"
 					endDate="2009-01"
 					responsibilities={[
@@ -188,6 +198,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				<TimelineJobEntry
 					title="Junior .Net Developer"
 					company="FTI Consulting"
+					location="Melbourne, Australia"
 					startDate="2007-01"
 					endDate="2008-05"
 					responsibilities={[
