Adding this project to the list

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,8 @@ const projects = [
 		description: `A hobby project that allows users to create notes and share them with friends. 
 			The main users are my family. Previously, we used Google Keep, 
 			but I wanted to create something more tailored to our needs and privacy. 
-			It was also my foray into Svelte and SvelteKit!`,
+			It was also my foray into Svelte and SvelteKit! I would love to make use of local 
+			first development and offline support in the future.`,
 		tags: ['Svelte', 'SvelteKit', 'Postgres', 'Prisma', 'Tailwind', 'Vercel'],
 		projectUrl: 'https://notes.vasic.com.au',
 		sourceCodeUrl: 'https://github.com/dejanvasic85/notes'
@@ -22,6 +23,15 @@ const projects = [
 		tags: ['Nextjs', 'Sanity CMS', 'Tailwind', 'Vercel'],
 		projectUrl: 'https://www.sesmelbourne.com.au/',
 		sourceCodeUrl: 'https://github.com/dejanvasic85/ses-next'
+	},
+	{
+		title: 'My portfolio website',
+		description: `My personal website and blog where I share my thoughts on software engineering, 
+			technology, and life in general. It is built with Astro and uses Tailwind CSS for styling. 
+			The blog is powered by MDX, allowing me to write posts in Markdown with React components.`,
+		tags: ['Astro', 'MDX', 'Tailwind', 'Vercel'],
+		projectUrl: 'https://dejan.vasic.com.au',
+		sourceCodeUrl: 'https://github.com/dejanvasic85/portfolio'
 	}
 ];
 ---
