--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const canonicalURL = new URL(pathname.replace(/\/$/, '') || '/', Astro.site).hre
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="sitemap" href="/sitemap-index.xml" />
+		<link rel="alternate" type="application/rss+xml" title="Dejan Vasic - Blog" href="/rss.xml" />
 		<GoogleAnalytics />
 		<ClientRouter />
 		<title>{title}</title>
