--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -128,6 +128,8 @@ const canonicalURL = new URL(cleanPath, Astro.site).href;
 	.main-nav {
 		display: flex;
 		gap: 1.5rem;
+		height: 44px;
+		align-items: center;
 	}
 
 	.main-nav a {
